--- a/index.html
+++ b/index.html
@@ -6,8 +6,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <canvas id="canvas" class="canvas"></canvas>
 
+    <div class="controls">
+        <div class="controls-range">
+            <input type="range" min="0.1" max="5.0" value="2.5" step="0.1" class="slider" id="range">
+        </div>
 
-<script src="index.js"></script>
+        <div class="controls-buttons">
+            <button class="controls-buttons" id="mode-button">Заливка</button>
+            <button class="controls-buttons" id="save-button">Сохранить</button>
+        </div>
+
+        <div class="controls-colors" id="colors">
+            <div class="controls-colors black"></div>
+            <div class="controls-colors white"></div>
+            <div class="controls-colors red"></div>
+            <div class="controls-colors orange"></div>
+            <div class="controls-colors yellow"></div>
+            <div class="controls-colors green"></div>
+            <div class="controls-colors light-blue"></div>
+            <div class="controls-colors blue"></div>
+            <div class="controls-colors purple"></div>
+        </div>
+    </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
