--- a/index.html
+++ b/index.html
@@ -9,15 +9,6 @@
     <canvas id="canvas" class="canvas"></canvas>
 
     <div class="controls">
-        <div class="controls-range">
-            <input type="range" min="0.1" max="5.0" value="2.5" step="0.1" class="slider" id="range">
-        </div>
-
-        <div class="controls-buttons">
-            <button class="controls-buttons" id="mode-button">Заливка</button>
-            <button class="controls-buttons" id="save-button">Сохранить</button>
-        </div>
-
         <div class="controls-colors" id="colors">
             <div class="controls-colors black"></div>
             <div class="controls-colors white"></div>
@@ -28,6 +19,16 @@
             <div class="controls-colors light-blue"></div>
             <div class="controls-colors blue"></div>
             <div class="controls-colors purple"></div>
+        </div>
+
+        <div class="controls-range">
+            <label for="range">Толщина кисти</label>
+            <input type="range" min="0.1" max="5.0" value="2.5" step="0.1" class="slider" id="range">
+        </div>
+
+        <div class="controls-buttons">
+            <button class="controls-buttons" id="mode-button">Заливка</button>
+            <button class="controls-buttons" id="save-button">Сохранить</button>
         </div>
     </div>
 
