feat: add color change

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
     <div class="controls">
         <div class="controls-colors" id="colors">
-            <div class="controls-colors black"></div>
-            <div class="controls-colors white"></div>
-            <div class="controls-colors red"></div>
-            <div class="controls-colors orange"></div>
-            <div class="controls-colors yellow"></div>
-            <div class="controls-colors green"></div>
-            <div class="controls-colors light-blue"></div>
-            <div class="controls-colors blue"></div>
-            <div class="controls-colors purple"></div>
+            <div class="controls-colors color black"></div>
+            <div class="controls-colors color white"></div>
+            <div class="controls-colors color red"></div>
+            <div class="controls-colors color orange"></div>
+            <div class="controls-colors color yellow"></div>
+            <div class="controls-colors color green"></div>
+            <div class="controls-colors color light-blue"></div>
+            <div class="controls-colors color blue"></div>
+            <div class="controls-colors color purple"></div>
         </div>
 
         <div class="controls-range">
@@ -33,5 +33,6 @@
     </div>
 
     <script src="index.js"></script>
+
 </body>
 </html>
