--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 
         <div class="controls-range">
             <label for="range">Толщина кисти</label>
-            <input type="range" min="0.1" max="5.0" value="2.5" step="0.1" class="slider" id="range">
+            <input type="range" min="0.1" max="10.0" value="5.0" step="0.1" class="slider" id="range">
         </div>
 
         <div class="controls-buttons">
             <button class="controls-buttons" id="mode-button">Заливка</button>
+            <button class="controls-buttons" id="clear-button">Очистить</button>
             <button class="controls-buttons" id="save-button">Сохранить</button>
         </div>
     </div>
