--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="controls">
         <div class="controls-colors" id="colors">
-            <div class="controls-colors color black"></div>
+            <div class="controls-colors color black active"></div>
             <div class="controls-colors color white"></div>
             <div class="controls-colors color red"></div>
             <div class="controls-colors color orange"></div>
